[package]
name = "eszip-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
futures = "0.3.21"

[dependencies.eszip]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "eszip-parse"
path = "fuzz_targets/eszip-parse.rs"
test = false
doc = false

[profile.release]
debug = true
